# Sadcher

./: .gitignore  .gitmodules  README.md  pyproject.toml
baselines/: algorithm_comparison.ipynb
benchmarking/: benchmark_HeteroMRTA_marmotlab.py  benchmark_helpers.py  benchmark_schedulers.py  create_data_for_scaling_graphs.py
code/: GT_generation.py
code_for_delft_blue/: .generate_dataset.py.swp  MILP_solver.py  generate_dataset.py  launch_dataset_generation.sh  problem_generator.py  schedules.py  slurm-5681324.out  slurm-5681698.out
data_generation/: generate_dataset.py  generate_simple_dataset.py  problem_generator.py
helper_functions/: schedule.py  schedules.py  task_robot_classes.py
imitation_learning/: attention_models.py  dataset.py  optuna_hyperparam_tuning.py  precompute_dataset.py  train.py  training_helpers.py
models/: graph_attention.py  policy_value.py  policy_value_continuous.py  policy_value_discrete.py  scheduler_network.py  transformers.py
reinforcement_learning/: continuous_gym_environment_rl.py  discrete_gym_environment_rl.py  gym_environment_rl.py  optuna_continuous_hyperparameter_optimization.py  optuna_discrete_hyperparameter_optimization.py  policy_value.py  ppo_train.py  rl_evaluation.py  rl_simulator.py  sk_rl_policy.py
schedulers/: benchmark_schedulers.py  bigraph_matching.py  bipartite_matching.py  create_data_for_scaling_graphs.py  dbgm_scheduler.py  filtering_assignments.py  greedy_instantaneous_scheduler.py  initialize_schedulers.py  random_bipartite_matching_scheduler.py  sadcher.py  sadcherRL.py
simulation_environment/: display_simulation.py  greedy_instantaneous_scheduler.py  run_simulation.py  simulation_config.yaml  simulator_2D.py  task_robot_classes.py
visualizations/: benchmark_visualizations.py  scaling_graphs_visualizations.py  (+2 more)
(+23 files in other folders)
