[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pulp>=2.9.0",
    "torch-geometric>=2.6.1",
    "torch==2.4.0",
    "tqdm>=4.67.1",
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.2",
    "imageio[ffmpeg]>=2.37.0",
    "icecream>=2.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
