[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "pulp>=2.9.0",
    "torch-geometric>=2.6.1",
    "torch==2.4.0",
    "tqdm>=4.67.1",
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.2",
    "icecream>=2.1.4",
    "optuna>=4.2.1",
    "opencv-python>=4.11.0.86",
    "gymnasium>=1.1.1",
    "tensorboard>=2.19.0",
    "skrl[torch]>=1.4.3",
]


